--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>Library</name>
 	<url>http://maven.apache.org</url>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+		
+		<org.springframework-version>3.2.5.RELEASE</org.springframework-version>
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -20,11 +28,11 @@
 			<scope>test</scope>
 		</dependency>
 <!-- *********  Logging  **************** -->
-		<!-- <dependency>
+		 <dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
+			<artifactId>jcl-over-slf4j</artifactId>
 			<version>1.7.5</version>
-		</dependency> -->
+		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
@@ -57,25 +65,33 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.27</version>
 		</dependency>
+		
+<!-- ***********  SPRING  ********************* -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>3.2.5.RELEASE</version>
+			<version>${org.springframework-version}</version>
+			<exclusions>
+		        <exclusion>
+		           <groupId>commons-logging</groupId>
+		           <artifactId>commons-logging</artifactId>
+		        </exclusion>
+     		</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>3.2.5.RELEASE</version>
+			<version>${org.springframework-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
-			<version>3.2.5.RELEASE</version>
+			<version>${org.springframework-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
-			<version>3.2.6.RELEASE</version>
+			<version>${org.springframework-version}</version>
 		</dependency>
 
 		<dependency>
@@ -131,9 +147,23 @@
 			<version>3.2.0.RELEASE</version>
 		</dependency>
 
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>tiles-jsp</artifactId>
+			<exclusions>
+	            <exclusion>
+	                <groupId>org.slf4j</groupId>
+	                <artifactId>slf4j-nop</artifactId>
+	            </exclusion>
+	            <exclusion>
+	                <groupId>org.slf4j</groupId>
+	                <artifactId>slf4j-api</artifactId>
+	             </exclusion>
+	             <exclusion>
+	                 <groupId>org.slf4j</groupId>
+	                 <artifactId>jcl-over-slf4j</artifactId>
+	             </exclusion>
+        	</exclusions>
 			<version>3.0.3</version>
 		</dependency>
 		<dependency>
@@ -155,7 +185,7 @@
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>tiles-template</artifactId>
 			<version>3.0.3</version>
-		</dependency> -->
+		</dependency>
 
 		<dependency>
 			<groupId>org.json</groupId>
@@ -168,7 +198,7 @@
 			<version>1.9.13</version>
 		</dependency>
 
-		 <dependency>
+		 <!-- <dependency>
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>tiles-extras</artifactId>
 			<version>3.0.3</version>
@@ -186,7 +216,7 @@
 	                 <artifactId>jcl-over-slf4j</artifactId>
 	             </exclusion>
         </exclusions>
-		</dependency> 
+		</dependency>  -->
 	</dependencies>
 	
 	<build>
@@ -199,9 +229,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.7</maven.compiler.source>
-		<maven.compiler.target>1.7</maven.compiler.target>
-	</properties>
 </project>
